2001-07-31	<mschimek@users.sf.net>

	* Added optional input fifo wrapper to mp2 encoder.

2001-07-28	<mschimek@users.sf.net>

	* Converted remaining fifos to fifo2.

2001-07-27	<mschimek@users.sf.net>

	* Converted capture fifos to fifo2 in mp1e and rte.
	* Configure checks whether as supports SSE2.

2001-07-18	<mschimek@users.sf.net>

	* Rewrote bstream function
	* Several fixes and improvements in emu
	* Added SSE2 support

2001-07-13	<mschimek@users.sf.net>

	* Fixed video API detection
	* Oops, forgot to clean up SIGTERM

2001-07-12	<mschimek@users.sf.net>

	* Made emu work with pthreads (phew...)
	* Added SSE and 3DNow! support

2001-07-06	<mschimek@users.sf.net>

	* Made ioctls EINTR aware
	* Corrected a B quant typo (post 1.9pre1)
	* Added motion option to rte

2001-07-05	<mschimek@users.sf.net>

	* Fixed global vbuf conflict in rte_test, same correction
	  in video/v4l2.c, just in case

2001-07-02	<mschimek@users.sf.net>

	* Added man page

2001-06-22	<mschimek@users.sf.net>

	- MC + 704x576 -> segv
	  2001-07-05 can't reproduce
	* gcc 3.0 fixes

2001-06-07	<mschimek@users.sf.net>

	* Restored subtitle recording
	- MC P/B bug still with us :-P

2001-06-05	<mschimek@users.sf.net>

	* Removed all hardcoded image sizes from motion code
	* Some cleanup in motion.c
	* Integration of motion finished (not enabled by default)

2001-06-04	<mschimek@users.sf.net>

	* Fixed B-frame VLC bug
	* Fixed B-motion mb skipping bug
	* Fixed B-motion PMV bug
	* Fixed MV overflow bug (could be improved)

2001-06-01	<mschimek@users.sf.net>

	* Rewrote configure.in; added config.h
	* Fixed closed_gop B-motion bug
	* Integrating motion, unfinished

2001-05-27	<garetxe@users.sf.net>

	* Fixed rte buffered push capture, removed the possibility of
	deadlock in kill_zombies (the solution isn't optimal,
	though). rte_test works now with all possible combinations for me.
	* YVU support.

2001-05-10	<garetxe@users.sf.net>
