@@ -1,7 +1,9 @@
-#if defined(HAVE_LIBXV) && defined(TEST_PREVIEW)
+
 #ifdef HAVE_CONFIG_H
 #  include <config.h>
 #endif
+
+#if TEST_PREVIEW && HAVE_LIBXV
 
 #include <sys/types.h>
 #include <sys/stat.h>
