@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: mpeg.h,v 1.3 2001-07-12 01:22:06 mschimek Exp $ */
+/* $Id: mpeg.h,v 1.4 2001-08-01 08:40:16 mschimek Exp $ */
 
 #define PICTURE_START_CODE		0x00000100L
 #define SLICE_START_CODE		0x00000101L
@@ -29,20 +29,24 @@
 #define SEQUENCE_END_CODE		0x000001B7L
 #define GROUP_START_CODE		0x000001B8L
 
-#define I_TYPE				1
-#define P_TYPE				2
-#define B_TYPE				3
-#define D_TYPE				4
+typedef enum {
+	I_TYPE = 1,
+	P_TYPE,
+	B_TYPE,
+	D_TYPE,
+} picture_type;
 
-#define SEQUENCE_EXTENSION_ID			1
-#define SEQUENCE_DISPLAY_EXTENSION_ID		2
-#define QUANT_MATRIX_EXTENSION_ID		3
-#define COPYRIGHT_EXTENSION_ID			4
-#define SEQUENCE_SCALABLE_EXTENSION_ID		5
-#define PICTURE_DISPLAY_EXTENSION_ID		7
-#define PICTURE_CODING_EXTENSION_ID		8
-#define PICTURE_SPATIAL_SCALABLE_EXTENSION_ID	9
-#define PICTURE_TEMPORAL_SCALABLE_EXTENSION_ID	10
+typedef enum {
+	SEQUENCE_EXTENSION_ID =	1,
+	SEQUENCE_DISPLAY_EXTENSION_ID,
+	QUANT_MATRIX_EXTENSION_ID,
+	COPYRIGHT_EXTENSION_ID,
+	SEQUENCE_SCALABLE_EXTENSION_ID,
+	PICTURE_DISPLAY_EXTENSION_ID = 7,
+	PICTURE_CODING_EXTENSION_ID,
+	PICTURE_SPATIAL_SCALABLE_EXTENSION_ID,
+	PICTURE_TEMPORAL_SCALABLE_EXTENSION_ID,
+} extension_id;
 
 typedef enum {
 	MB_INTRA,
