@@ -1,3 +1,11 @@
+2001-08-01	<mschimek@users.sf.net>
+
+	* video/mpeg1.c: Fixed fifo eof handling.
+	* Restored preview, preliminary
+	* Examined the 2001-06-07 bug, is a DC rounding problem,
+	  not strictly a bug. Modified the quant calculation.
+	  Lets see how that works, then optimize. (**)
+
 2001-07-31	<mschimek@users.sf.net>
 
 	* Added optional input fifo wrapper to mp2 encoder.
